[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures-util = "0.3.31"
helius = "0.3.2"
re = "0.1.9"
redis = "1.0.0"
serde_json = "1.0.145"
solana-client = "3.1.4"
solana-sdk = "2.3.1"
solana-transaction-status = "3.1.4"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.43"
url = "2.5.7"
