[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures-util = "0.3.31"
helius = "0.3.2"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
reqwest = "0.12.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "3.1.4"
solana-sdk = "2.3.1"
solana-transaction-status = "3.1.4"
sqlx = "0.8.6"
sqlx-cli = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.43"
tracing-subscriber = "0.3"                                                      # Added for logging
url = "2.5.7"
